--- a/style/style.css
+++ b/style/style.css
@@ -37,13 +37,13 @@ body{
     padding-right: 16px;
 }
 .form-section{
-
+    max-width: 555px;
+    width: 80%;
     text-align: center;
     margin: 0 auto;
 }
 .form-section form{
-    max-width: 555px;
-    width: 80%;
+
     margin:0 auto ;
     margin-top: 3px;
     text-align: start;
@@ -56,8 +56,6 @@ body{
     height: 60px;
     background-color:rgb(245, 248, 250);
     margin-bottom: 20px;
-    
-
 }
 
 .form-section form div:focus-within {
@@ -66,18 +64,17 @@ body{
 }
 .form-section form div:focus-within label{
     color:rgb(29,161,242);
-
 }
 .form-section label, .form-section input{
     display: block;
-    width: 98%;
-
-
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 10px;
 }
+
 .form-section label{
     font-size: 14px;
     color: rgb(101, 119, 134);
-    margin-left: 10px;
     font-weight: 300;
 }
 .form-section input{
@@ -85,7 +82,6 @@ body{
     border: none;
     font-size: 20px;
     background-color: transparent;
-    padding-left: 10px;
     
 }
 .form-section input:focus{
